# metapost-sandbox

./: .env.example  .gitignore  416085.0  Dockerfile  README.md  database.md  migrate_to_gists.py  pyproject.toml  requirements.txt
app/: main.py  mpostdb.py
static/: annotate.css  codemirror.css  codemirror.js  common.css  embed.css  embed.js  gist-client.js  github-auth.js  main.js  metapost.mode.js  nord.css  pocketbase.es.js  pocketbase.es.js.map  style.css  svgannotate.js  user.css
templates/: about.html  documentation.html  embed.html  index.html  user.html
