[project]
name = "metapost-sandbox"
version = "0.1.0"
description = "Online Metapost code editor with live SVG preview"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.23.0",
    "jinja2>=3.1.0",
    "requests>=2.31.0",
]

[project.scripts]
mpost-sandbox = "app.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["app"]
